
EXTRA_DIST  = consumer/hoa_consumer_exception.hh
EXTRA_DIST += consumer/hoa_intermediate_check_validity.hh
EXTRA_DIST += consumer/hoa_consumer.hh
EXTRA_DIST += consumer/hoa_intermediate_resolve_aliases.hh
EXTRA_DIST += consumer/hoa_intermediate.hh
EXTRA_DIST += consumer/hoa_consumer_ltsmin.hh
EXTRA_DIST += consumer/hoa_intermediate_trace.hh
EXTRA_DIST += consumer/hoa_consumer_print.hh
EXTRA_DIST += consumer/hoa_consumer_null.hh
EXTRA_DIST += ast/atom_acceptance.hh
EXTRA_DIST += ast/boolean_expression.hh
EXTRA_DIST += ast/atom_label.hh
EXTRA_DIST += parser/hoa_parser_helper.hh
EXTRA_DIST += parser/hoa_parser_exception.hh
EXTRA_DIST += parser/hoa_lexer.hh
EXTRA_DIST += parser/hoa_parser.hh
EXTRA_DIST += util/dynamic_bitset.hh
EXTRA_DIST += util/int_or_string.hh
EXTRA_DIST += util/implicit_edge_helper.hh
EXTRA_DIST += util/acceptance_repository.hh
EXTRA_DIST += util/acceptance_repository_standard.hh

